--- a/index.ipynb
+++ b/index.ipynb
@@ -143,9 +143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "28f40558-d336-11e8-8dbf-0242ac11001b"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"9b00be58-c0d1-4e44-930b-9f72d15fc497\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9b00be58-c0d1-4e44-930b-9f72d15fc497\", [{\"type\": \"scatter\", \"uid\": \"294483f2-d336-11e8-8dbf-0242ac11001b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"9b00be58-c0d1-4e44-930b-9f72d15fc497\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9b00be58-c0d1-4e44-930b-9f72d15fc497\", [{\"type\": \"scatter\", \"uid\": \"294483f2-d336-11e8-8dbf-0242ac11001b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([\n",
     "    {}\n",
