automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,9 +199,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "5ac3d07c-d336-11e8-8dbf-0242ac11001b",
+         "x": [
+          1,
+          2,
+          3,
+          4
+         ],
+         "y": [
+          1,
+          2,
+          3,
+          4
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"826b4ddc-736d-4a68-bb40-fc10b2609495\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"826b4ddc-736d-4a68-bb40-fc10b2609495\", [{\"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"5ace7464-d336-11e8-8dbf-0242ac11001b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"826b4ddc-736d-4a68-bb40-fc10b2609495\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"826b4ddc-736d-4a68-bb40-fc10b2609495\", [{\"x\": [1, 2, 3, 4], \"y\": [1, 2, 3, 4], \"type\": \"scatter\", \"uid\": \"5ace7464-d336-11e8-8dbf-0242ac11001b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
     "\n",
